# jintegral

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/validation/: abaqus_validation.py
examples/validation/data/: frames_info.csv  materials.csv
jintegral/: abaqus_sample.py  crack.py  davis_sample.py  fig_template.py  frame.py  jintegral.py  material.py  sample.py  utils.py  vic_sample.py
