[tool.poetry]
name = "jintegral"
version = "1.0.0.alpha.2"
description = "A Python implementation of J-integral data reduction for translaminar toughness of compact tension specimens"
authors = ["Guillaume Broggi <25569517+GuillaumeBroggi@users.noreply.github.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
plotly = "^5.13.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
csaps = "^1.1.0"
scipy = "^1.10.1"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
